# docs/swagger.yaml
@@ -1,4 +1,127 @@
 definitions:
+  dao.AccessControl:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      id:
+        type: integer
+      open_auth:
+        type: integer
+      service_flow_limit:
+        type: integer
+      service_id:
+        type: integer
+      white_host_name:
+        type: string
+      white_list:
+        type: string
+    type: object
+  dao.GrpcRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dao.HttpRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_id:
+        type: integer
+      url_rewrite:
+        type: string
+    type: object
+  dao.LoadBalance:
+    properties:
+      check_interval:
+        type: integer
+      check_method:
+        type: integer
+      check_timeout:
+        type: integer
+      forbid_list:
+        type: string
+      id:
+        type: integer
+      ip_list:
+        type: string
+      round_type:
+        type: integer
+      service_id:
+        type: integer
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      weight_list:
+        type: string
+    type: object
+  dao.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/dao.AccessControl'
+      grpc_rule:
+        $ref: '#/definitions/dao.GrpcRule'
+      http_rule:
+        $ref: '#/definitions/dao.HttpRule'
+      info:
+        $ref: '#/definitions/dao.ServiceInfo'
+      load_balance:
+        $ref: '#/definitions/dao.LoadBalance'
+      tcp_rule:
+        $ref: '#/definitions/dao.TcpRule'
+    required:
+    - info
+    type: object
+  dao.ServiceInfo:
+    properties:
+      create_at:
+        type: string
+      id:
+        type: integer
+      is_delete:
+        type: integer
+      load_type:
+        type: integer
+      service_desc:
+        type: string
+      service_name:
+        type: string
+      update_at:
+        type: string
+    type: object
+  dao.TcpRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
   dto.AdminChangePwdInput:
     properties:
       password:
@@ -43,6 +166,61 @@ definitions:
         description: token
         example: token
         type: string
+    type: object
+  dto.ServiceAddHttpInput:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      forbid_list:
+        type: string
+      header_transfor:
+        type: string
+      ip_list:
+        type: string
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      open_auth:
+        type: integer
+      round_type:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_desc:
+        type: string
+      service_flow_limit:
+        type: integer
+      service_name:
+        type: string
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      url_rewrite:
+        type: string
+      weight_list:
+        type: string
+      white_host_name:
+        type: string
+      white_list:
+        type: string
+    required:
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   dto.ServiceListItemOutput:
     properties:
@@ -181,11 +359,39 @@ paths:
       summary: 退出接口
       tags:
       - 管理员接口
+  /service/service_add_http:
+    post:
+      consumes:
+      - application/json
+      description: 添加Http服务信息
+      operationId: /service/service_add_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddHttpInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 添加Http服务信息
+      tags:
+      - 服务管理
   /service/service_delete:
     get:
       consumes:
       - application/json
-      description: 服务列表
+      description: 服务删除
       operationId: /service/service_delete
       parameters:
       - description: 服务ID
@@ -205,7 +411,33 @@ paths:
                 data:
                   type: string
               type: object
-      summary: 服务列表
+      summary: 服务删除
+      tags:
+      - 服务管理
+  /service/service_detail:
+    get:
+      consumes:
+      - application/json
+      description: 服务详细
+      operationId: /service/service_detail
+      parameters:
+      - in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dao.ServiceDetail'
+              type: object
+      summary: 服务详细
       tags:
       - 服务管理
   /service/service_list:
